# cv

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  cv.tex  cv_data.yaml  deedy-resume.cls
.cursor/rules/: brief-readme.mdc  clean-code-practices.mdc  cv-project-structure.mdc  investigation-first-methodology.mdc  makefile-best-practices.mdc  pdfjs-customization-methodology.mdc  prefer-make-targets.mdc  project-structure.mdc
.github/workflows/: build.yaml  build_cv.yaml  deploy.yaml  deploy_pages.yaml  validate.yaml
cv_renderer/: README.md  __init__.py  __main__.py  app.py  logger.py  models.py  pyproject.toml  renderer.py  template_type.py
cv_renderer/ast/: __init__.py  base.py  html_renderer.py  latex_renderer.py  plain_renderer.py
cv_renderer/src/cv_renderer/: __main__.py  app.py  app_params.py  models.py  renderer.py  template_type.py  template_utils.py
cv_renderer/src/cv_renderer/ast/: base.py  html_renderer.py  latex_renderer.py  plain_renderer.py
cv_renderer/tests/: __init__.py  test_template_type.py  test_template_utils.py
gh-pages/: .gitignore  .stylelintrc.json  fallback-detection.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  robots.txt  script.js  singlepageviewer.mjs  sitemap.xml  styles.css  unsupported.js  vite.config.js
gh-pages/img/favicon/: site.webmanifest
gh-pages/pdfjs/: build
gh-pages/pdfjs/web/: viewer.html
gh-pages/pdfjs/web/locale/cs/: viewer.ftl
gh-pages/pdfjs/web/locale/hr/: viewer.ftl
gh-pages/pdfjs/web/locale/th/: viewer.ftl
gh-pages/public/: sitemap.xml
gh-pages/public/img/favicon/: site.webmanifest
gh-pages/public/pdfjs/: build
gh-pages/public/pdfjs/web/: viewer.html  viewer.mjs
gh-pages/public/pdfjs/web/locale/da/: viewer.ftl
gh-pages/public/pdfjs/web/locale/en-US/: viewer.ftl
gh-pages/public/pdfjs/web/locale/et/: viewer.ftl
gh-pages/public/pdfjs/web/locale/ml/: viewer.ftl
gh-pages/public/pdfjs/web/locale/nb-NO/: viewer.ftl
gh-pages/src/: accessibility.js  fallback-detection.js  main.js  styles.css
templates/: cv.html.j2  cv.tex.j2
templates/tex/: cv-deedy.tex.j2
templates/web/: index.html.j2  robots.txt.j2  site.webmanifest.json.j2  sitemap.xml.j2  template_params.js.j2
tex/: deedy-resume.cls
